templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webui
  labels:
    app: minio
spec:
  to:
    kind: Service
    name: minio-webui
    weight: 100
  port:
    targetPort: webui
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: s3
  labels:
    app: minio
spec:
  to:
    kind: Service
    name: minio-api
    weight: 100
  port:
    targetPort: api
  wildcardPolicy: None
